tests/errors/duplicate-def/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0112]: Duplicate top-level definition `config`.
  │
1 │ def config = 1
  │     ^^^^^^ previous definition here
  ┆
3 │ def config = 2
  │     ^^^^^^
  ╰─𜱶 tests/errors/duplicate-def/main.pa:3:5
